<?xml version="1.0"?>
<package format="2">
    <name>assessment2</name>
    <version>0.1.0</version>
    <description>Package for assessment2 project.</description>
    <maintainer email="RM1661@live.mdx.ac.uk">Reia</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
    <export/>
</package>

